2010-03-15  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        VO not able to perform a VO-spacebar on facebook links
        https://bugs.webkit.org/show_bug.cgi?id=36132

        When a label element is used as a click event handler, and it doesn't have any
        corresponding control, it should handle the action itself.

        Test: accessibility/label-element-press.html

        * html/HTMLLabelElement.cpp:
        (WebCore::HTMLLabelElement::accessKeyAction):

2010-03-15  Cameron Zwarich  <zwarich@apple.com>

        Reviewed by Geoff Garen.

        Bug 36135 - GCController::garbageCollectNow() crashes when called from garbage collection
        <https://bugs.webkit.org/show_bug.cgi?id=36135>
        <rdar://problem/7752552>

        * bindings/js/GCController.cpp:
        (WebCore::GCController::garbageCollectNow): Fail silently if garbage collection is
        active rather than hitting the CRASH() reentrancy guard.

2010-03-15  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dan Bernstein.

        Drop out of compositing mode when no elements need to composite
        https://bugs.webkit.org/show_bug.cgi?id=36134

        When no more elements on the page need to be composited, drop out of compositing
        mode altogether, including removing the layer-backed view that hosts the layers.

        * rendering/RenderLayerCompositor.cpp:
        (WebCore::RenderLayerCompositor::updateCompositingLayers): If the list of child layers to attach at
        the root is empty, we have no composited layers, and can drop out of compositing mode by calling
        willMoveOffscreen().
        
        (WebCore::RenderLayerCompositor::computeCompositingRequirements): In several places,
        use willBeComposited rather than calling needsToBeComposited(), because it avoids
        recomputing state that we know already (but assert that we're getting it right).