@@ -1,3 +1,12 @@
+2010-03-15  Leandro Pereira  <leandro@profusion.mobi>
+
+        Reviewed by Eric Seidel.
+
+        Add EFL port files to platform/efl.
+        http://webkit.org/b/35885
+
+        * platform/efl/KURLEfl.cpp: Added.
+
 2010-03-15  Chris Fleizach  <cfleizach@apple.com>
 
         Reviewed by Beth Dakin.
